# sparks3d-preventivi

./: .gitignore  LICENSE  README.md  gitignore  index.html  latest.json  package-lock.json  package.json  tailwind.config.js  version.json  vite.config.ts
.claude/: CLAUDE.md
.tauri/: sparks3d.key.pub
public/: splashscreen.html
src/: App.tsx  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: backup.rs  dashboard.rs  db.rs  export.rs  gcode_parser.rs  lib.rs  main.rs  packlink.rs  preventivi.rs  ritenute.rs  search.rs  slicer.rs  updater.rs
src/components/clienti/: ClienteForm.tsx  ClientiPage.tsx
src/components/corrieri/: CorrieriModal.tsx
src/components/dashboard/: Dashboard.tsx
src/components/impostazioni/: AziendaPage.tsx  BackupRestore.tsx  CorriereForm.tsx  CorrieriPage.tsx  CorrieriTab.tsx  ImpostazioniPage.tsx  InterfacciaPage.tsx  MaterialeForm.tsx  MaterialiPage.tsx  MetodoPagamentoForm.tsx  PagamentiPage.tsx  ProfiliStampaPage.tsx  ProfiloStampaForm.tsx  ServiziExtraPage.tsx  ServizioExtraForm.tsx  SicurezzaPage.tsx  SlicerImportPage.tsx  SlicerProfilePicker.tsx  StampanteForm.tsx  StampantiPage.tsx
src/components/info/: GuidaPage.tsx  LicenzaPage.tsx
src/components/layout/: GlobalSearch.tsx  PinLockScreen.tsx  Sidebar.tsx  ThemeToggle.tsx  ToastProvider.tsx  UpdateBanner.tsx
src/components/preventivi/: NuovoPreventivo.tsx  PreventiviArchivio.tsx  ServiziExtraPage.tsx  SliceFileImporter.tsx
src/components/ritenuta/: RitenutaAccontoPage.tsx  RitenuteArchivio.tsx
src/context/: SettingsContext.tsx  ThemeContext.tsx
src/i18n/: index.ts
src/i18n/locales/: en.json  (+1 more)
src/lib/: api.ts
src/styles/: globals.css  theme.css
src/types/: index.ts
src/utils/: pdfExport.ts  ritenutaPdf.ts  validation.ts
