[package]
name = "sparks3d-preventivi"
version = "1.4.0"
description = "Software di preventivazione per stampa 3D FDM"
authors = ["Fabio Mazzarella - Sparks3D.it"]
edition = "2021"

[lib]
name = "sparks3d_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rust_xlsxwriter = "0.79"
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled-sqlcipher-vendored-openssl"] }
dirs = "5"
chrono = "0.4"
reqwest = { version = "0.12", features = ["json"] }
base64 = "0.22"
zip = "2"
tauri-plugin-updater = "2.10.0"
keyring = "3"
sha2 = "0.10"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
